# eprof

./: .gitignore  CMakeLists.txt  README.md  setup.py  todo
.github/workflows/: build_and_test.yaml
build-helpers/: README.md  cmake_dependencies_set_up  cmake_lazy_testing_targets  cmakefunc  lazy-test-cache.py
dev/.githooks/: .pre-push
dev/push_release_to_master/: push_to_master.py
eprof/: __init__.py  event.py  file.py  file_event_entry.py  meta.py
libs/C/: CMakeLists.txt
libs/C/src/: CMakeLists.txt  eprof.c
libs/C/src/file-lock/: file_lock.c
libs/C/src/includes/: eprof.h  file_lock.h  timer.h
libs/C/src/timer/: aple_timer.c  linux_timer.c  timer.c  windows_timer.c
libs/C/tests/: CMakeLists.txt  product.c
libs/C/tests/file-lock/: file_lock_test.c
libs/C/tests/timer/: get_smallest_timer.c  readme.md  timer_precision.c  timer_test.c
libs/generic_lib_test/: generic_output_check.py  test_all.py
libs/tests/: generic_output_check.py  test_all.py
src/eprof_code/dict_file/: super_dict.py
src/eprof_code/eprof/event_files/event/: event.py
src/eprof_code/eprof/event_files/parser/: event_entry.py  parser.py
src/eprof_code/sdf/: serie_dict_file.py
src/eprof_code/sdf/kvfplot/: kvfplot.py  parser.py
src/event/: event.py
src/libs/: CMakeLists.txt
src/libs/C/: CMakeLists.txt  eprof.c
src/libs/C/includes/: timer.h
src/parser/: parser.py
tests/: CMakeLists.txt  bin_test.py  run_tests.bash
tests/lazy/C/: eprof_lib_test.c
tests/mandatory/: README.md
tests/wrong_format/: E  S
